app-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bloodapp-service
spec:
  selector:
    app: bloodapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
