netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bankapp-allow-ingress
spec:
  podSelector:
    matchLabels:
      app: bloodapp

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    # Allow ingress-nginx controller pods
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
    ports:
    - protocol: TCP
      port: 80

  egress:
  # Allow DB access
  - to:
    - podSelector:
        matchLabels:
          app: bloodapp-db
    ports:
    - protocol: TCP
      port: 3306

  # Allow DNS (VERY IMPORTANT)
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
